--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,9 +5,9 @@
 
             <mat-button-toggle-group name="filters" aria-label="Filters"
                                      [hideMultipleSelectionIndicator]="true" multiple>
-                <mat-button-toggle value="r" class="toggler" title="Show or hide Route filters" checked>R
+                <mat-button-toggle value="r" class="toggler" matTooltip="Show or hide Route filters" checked>R
                 </mat-button-toggle>
-                <mat-button-toggle value="s" class="toggler" title="Show or hide Service filters" checked>S
+                <mat-button-toggle value="s" class="toggler" matTooltip="Show or hide Service filters" checked>S
                 </mat-button-toggle>
             </mat-button-toggle-group>
         </div>
