--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,19 +4,20 @@
     </button>
     <span class="title">KApisix - King for Apisix</span>
     <span class="spacer"></span>
-    <button mat-icon-button aria-label="Reset view" title="Reset graph zoom and position" (click)="fitScreen()">
+    <button mat-icon-button aria-label="Reset view" matTooltip="Reset graph zoom and position" (click)="fitScreen()">
         <mat-icon>fit_screen</mat-icon>
     </button>
-    <button mat-icon-button aria-label="Reload data" title="Reload graph data" (click)="reloadData()">
+    <button mat-icon-button aria-label="Reload data" matTooltip="Reload graph data" (click)="reloadData()">
         <mat-icon>refresh</mat-icon>
     </button>
     <button mat-icon-button aria-label="Help" (click)="help()">
         <mat-icon>help</mat-icon>
     </button>
-    <button mat-icon-button aria-label="Settings" title="Settings" (click)="settings()">
+    <button mat-icon-button aria-label="Settings" matTooltip="Settings" (click)="settings()">
         <mat-icon>settings</mat-icon>
     </button>
-    <a mat-icon-button aria-label="GitHub" title="Project Github repository" target="_blank"
+    <mat-divider [vertical]="true"></mat-divider>
+    <a mat-icon-button aria-label="GitHub" matTooltip="Project Github repository" target="_blank"
        href="https://github.com/ligreman/king-for-apisix">
         <mat-icon svgIcon="i-github" class="icon24"></mat-icon>
     </a>
