--- a/frontend/src/app/home/details-dialog.html
+++ b/frontend/src/app/home/details-dialog.html
@@ -4,6 +4,6 @@
     </button>
 </h2>
 <mat-dialog-content class="mat-typography margin-bottom-20">
-    <p><a mat-button [href]="url">{{url}}</a></p>
+    <p><a mat-button [href]="url" target="_blank">{{url}}</a></p>
     <div [innerHTML]="jsonHtml"></div>
 </mat-dialog-content>
